[package]
name = "discovronomicon"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.94"

uuid = { version = "0.7", features = ["serde", "v4"] }

structopt = "0.2.18"

actix-web = "1.0.3"
tokio = "0.1.22"
futures = "0.1.28"
actix = "0.8.3"
