[package]
name = "discovronomicon"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7.4", features = ["serde", "v4"] }

structopt = "0.2.18"
rocket = "0.4.2"

service_book = "0.1.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "uuid"]
